<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RPGme</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="stat_types">
        <item>Strength</item>
        <item>Intelligence</item>
        <item>Will</item>
        <item>Spirit</item>
    </string-array>
    <string-array name="difficulty">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>
    <string-array name="recurrence">
        <item>None</item>
      	<item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>  
    </string-array>
    
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">RPGme</string>
    <string name="title_activity_create_player">CreatePlayerActivity</string>
    <string name="name">Name:</string>
    <string name="classs">Class:</string>
    <string name="avatar1">male</string>
    <string name="avatar2">female</string>
    <string name="avatar">Your Avatar</string>
    <string name="submit">Submit</string>
    <string name="equipItem">equip</string>
    <string name="sellItem">sell</string>
    <string name="useItem">use</string>
    <string name="details">Details</string>

</resources>
