<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreatePlayerActivity" >

    <EditText
        android:id="@+id/playerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/playerClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playerName"
        android:layout_below="@+id/playerName"
        android:ems="10"
        android:hint="@string/classs"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/avatar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playerClass"
        android:layout_below="@+id/playerClass"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/avatar1" />

    <ImageButton
        android:id="@+id/avatar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/playerClass"
        android:layout_below="@+id/playerClass"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/avatar2" />

    <ImageView
        android:id="@+id/playerAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/avatar1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/avatar1"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/avatar" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/avatar2"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />

</RelativeLayout>
